@@ -1,3 +1,11 @@
+2006-02-07  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
+
+	PR target/26109
+	* pa.c (attr_length_indirect_call): Don't return length 8 for distances
+	>= 240000 when generating code for SOM runtime.
+	(output_indirect_call): Don't use "b,l" instruction for indirect calls
+	to $$dyncall when generating code for SOM runtime..
+
 2006-02-07  Eric Botcazou  <ebotcazou@libertysurf.fr>
 
 	* config/sol26.h (CPP_SUBTARGET_SPEC): Accept -pthread.
